Refresh of core code
* Upgrade to Java 21 and Spring Boot 3.2
* Refresh Gatling to use Java DSL and Maven plugin